--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <li><strong>1) Collection of Postman requests for testing:</strong> <a href="https://github.com/SergejsP84/PropMan---external-files/blob/main/Destiny%20Property%20Management%20Project.postman_collection.json" target="_blank">Download Postman Collection</a></li>
                 <li><strong>2) .bat file for setting up system variables:</strong> <a href="https://github.com/SergejsP84/PropMan---external-files/blob/main/propman_env_setup.bat" target="_blank">Download .bat file</a></li>
                 <li><strong>3) Project Manual in English (PDF):</strong> <a href="https://github.com/SergejsP84/PropMan---external-files/blob/main/ENG_PropMan%20Project%20Manual.pdf" target="_blank">Download English Manual</a></li>
-                <li><strong>4) Project Manual in Russian (PDF):</strong> <em>Coming Soon</em></li>
+                <li><strong>4) Project Manual in Russian (PDF):</strong> <a href="https://github.com/SergejsP84/PropMan---external-files/blob/main/RUS_PropMan%20Project%20Manual.pdf" target="_blank">Download Russian Manual</a></li>
             </ul>
     
             <h2>Ссылки (Русский)</h2>
@@ -101,7 +101,7 @@
                 <li><strong>1) Коллекция запросов Postman для тестирования:</strong> <a href="https://github.com/SergejsP84/PropMan---external-files/blob/main/Destiny%20Property%20Management%20Project.postman_collection.json" target="_blank">Скачать коллекцию Postman</a></li>
                 <li><strong>2) .bat файл для настройки системных переменных:</strong> <a href="https://github.com/SergejsP84/PropMan---external-files/blob/main/propman_env_setup.bat" target="_blank">Скачать .bat файл</a></li>
                 <li><strong>3) Руководство по проекту на английском (PDF):</strong> <a href="https://github.com/SergejsP84/PropMan---external-files/blob/main/ENG_PropMan%20Project%20Manual.pdf" target="_blank">Скачать руководство на английском</a></li>
-                <li><strong>4) Руководство по проекту на русском (PDF):</strong> <em>Скоро будет</em></li>
+                <li><strong>4) Руководство по проекту на русском (PDF):</strong> <a href="https://github.com/SergejsP84/PropMan---external-files/blob/main/RUS_PropMan%20Project%20Manual.pdf" target="_blank">Скачать руководство на русском<</a></li>
             </ul>
         </div>
     
